[package]
name = "heatmap"
version = "0.1.4"
authors = ["Brian Martin <brayniac@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

homepage = "https://github.com/brayniac/heatmap"
documentation = "http://brayniac.github.io/heatmap"
repository = "https://github.com/brayniac/heatmap"

description = "heatmap storage, set of histograms"

keywords = [ "heatmap", "histogram", "percentile", "statistics", "stats" ]

[dependencies]
time = "0.1.34"
histogram = "0.3.5"