[package]
name = "heatmap"
version = "0.4.1"
authors = ["Brian Martin <brayniac@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

homepage = "https://github.com/brayniac/heatmap"
documentation = "https://brayniac.github.io/heatmap"
repository = "https://github.com/brayniac/heatmap"

description = "heatmap storage, set of histograms"

keywords = [ "heatmap", "histogram", "percentile", "statistics", "stats" ]

[dependencies]
histogram = "0.6.1"