[package]
name = "heatmap"
version = "0.6.6"
authors = ["Brian Martin <brayniac@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

homepage = "https://github.com/brayniac/heatmap"
documentation = "https://docs.rs/heatmap"
repository = "https://github.com/brayniac/heatmap"

description = "time-series of histograms with precision guarantees"

keywords = [ "heatmap", "histogram", "percentile", "statistics", "stats" ]

categories = [ "data-structures" ]

[dependencies]
histogram = "0.6.6"
time = "0.1.37"
